<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eric_platt"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valleycollegemidterm1"
                android:textAlignment="center"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sbvc_logo_2022_darker_275"
                android:contentDescription="@string/san_bernardino_college_banner"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/the_college_wolverine_mascot"
                android:rotation="62"
                android:rotationY="166"
                android:src="@drawable/homepage_woverine" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/campus_beauty_homepage_hero"
                android:contentDescription="@string/a_scenic_view_of_the_campus"
                />
            <Button
                android:id="@+id/makeToast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_sbvc"
                android:background="@color/valleyCollegeLogoBlue"
                />
            <Button
                android:id="@+id/junkMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Email"
                />
            <Button
                android:id="@+id/viewHomepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Homepage"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>